--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,42 @@
 	<body ng-app="todomvc">
 		<ng-view></ng-view>
 
-		<script type="text/ng-template" id="todomvc-index.html">
-			<section id="todoapp">
+		<script type="text/ng-template" id="todomvc-view-list.html">
+			<section id="todoapp-view-list-container">
+				<h1>todos</h1>
+				<section ng-include="'todomvc-lists.html'"></section>
+				<section ng-include="'todomvc-todo.html'"></section>
+			</section>
+		</script>
+		<script type="text/ng-template" id="todomvc-new-list.html">
+			<section id="todoapp-new-list-container" ng-cloak>
+				<h1>new list</h1>
+				<form id="new-list-form" ng-submit="createList()">
+					<input id="new-list" placeholder="What should it be called?"
+					       ng-model="newListName" ng-disabled="saving"
+					       ng-class="{'invalid-name': newListNameExists()}"
+					       autofocus>
+				</form>
+				<div id="new-list-warning" ng-show="newListNameExists()">This name is already in use, please choose another one</div>
+			</section>
+		</script>
+		<script type="text/ng-template" id="todomvc-lists.html">
+			<section id="todolists" ng-controller="ListsCtrl" ng-cloak>
+				<select id="todolists-dropdown" title="Current To Do list"
+				        ng-model="selectedList"
+				        ng-options="list.name for list in lists track by list.name"
+				        ng-change="onSelectionChanged()">
+				</select>
+				<ul id="todolist-buttons">
+					<li><a ng-href="{{newListHref}}" title="Create new To Do list">Create new list</a></li>
+					<li><a ng-click="deleteCurrentList()" title="Delete current To Do list"
+					       ng-show="canDeleteCurrentList()">Delete this list</a></li>
+				</ul>
+			</section>
+		</script>
+		<script type="text/ng-template" id="todomvc-todo.html">
+			<section id="todoapp" ng-controller="TodoCtrl">
 				<header id="header">
-					<h1>todos</h1>
 					<form id="todo-form" ng-submit="addTodo()">
 						<input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" ng-disabled="saving" autofocus>
 					</form>
@@ -39,13 +71,13 @@
 					</span>
 					<ul id="filters">
 						<li>
-							<a ng-class="{selected: status == ''} " href="#/">All</a>
+							<a ng-class="{selected: status == ''} " ng-href="{{allItemsHref}}">All</a>
 						</li>
 						<li>
-							<a ng-class="{selected: status == 'active'}" href="#/active">Active</a>
+							<a ng-class="{selected: status == 'active'}" ng-href="{{onlyActiveItemsHref}}">Active</a>
 						</li>
 						<li>
-							<a ng-class="{selected: status == 'completed'}" href="#/completed">Completed</a>
+							<a ng-class="{selected: status == 'completed'}" ng-href="{{onlyCompletedItemsHref}}">Completed</a>
 						</li>
 					</ul>
 					<button id="clear-completed" ng-click="clearCompletedTodos()" ng-show="completedCount">Clear completed</button>
@@ -66,6 +98,9 @@
 		<script src="lib/angular-route.js"></script>
 		<script src="lib/angular-resource.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js/controllers/mainCtrl.js"></script>
+		<script src="js/controllers/newListCtrl.js"></script>
+		<script src="js/controllers/listsCtrl.js"></script>
 		<script src="js/controllers/todoCtrl.js"></script>
 		<script src="js/services/todoStorage.js"></script>
 		<script src="js/directives/todoFocus.js"></script>
