--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,7 @@
 		<script src="js/controllers/listsCtrl.js"></script>
 		<script src="js/controllers/todoCtrl.js"></script>
 		<script src="js/services/todoStorage.js"></script>
+		<script src="js/directives/autofocus.js"></script>
 		<script src="js/directives/todoFocus.js"></script>
 		<script src="js/directives/todoEscape.js"></script>
 	</body>
